Update custom scenario verbs.